[package]
name = "unix-udp-sock"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leshow/udp-sock"
description = "async UDP sockets supporting sendmsg/recvmsg and src IP manipulation"
keywords = ["udp", "async"]
categories = ["network-programming", "asynchronous"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
socket2 = "0.4"
tracing = "0.1.35"
tokio = { version = "1.19", features = ["net"] }
bytes = "1.1.0"