[package]
name = "unix-udp-sock"
version = "0.7.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leshow/unix-udp-sock"
description = "async & sync UDP sockets supporting sendmsg/recvmsg and src IP manipulation"
keywords = ["udp", "async", "socket", "linux", "unix"]
categories = ["network-programming", "asynchronous"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
socket2 = "0.5.6"
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["net"] }
tokio-util = { version = "0.7.10", features = ["codec", "net"] }
bytes = "1.1.0"
futures-core = "0.3.30"
futures-sink = "0.3.30"
pin-project-lite = "0.2.14"

# [dev-dependencies]
# nix = "0.26"
